--- a/src/cr/ac/una/ingenieria/appMVC/Vista/Modulo_TipoArticulo.form
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/Modulo_TipoArticulo.form
@@ -4,7 +4,7 @@
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="AGREGAR TIPO ARTICULO"/>
+    <Property name="title" type="java.lang.String" value="MANTENIMIENTO TIPO ARTICULO"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
